--- a/src/frontend/app/Views/blocks/footer/css/footer_mobile.scss
+++ b/src/frontend/app/Views/blocks/footer/css/footer_mobile.scss
@@ -1,4 +1,49 @@
 @import "footer";
 
 @media (max-width: 1100px){
+    .footer {
+        &__info {
+            width: 100%;
+            margin-bottom: 32px;
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid #464A4F;
+            padding-bottom: 30px;
+        }
+
+        &__top {
+            padding-top: 30px;
+            padding-bottom: 32px;
+        }
+
+        &__desc {
+            font-size: 16px;
+            line-height: 22px;
+            opacity: 0.55;
+            margin-top: 0;
+        }
+
+        &__nav {
+            width: 100%;
+
+            margin-top: 20px;
+        }
+
+        &__bottom {
+            &-container {
+                justify-content: center;
+            }
+        }
+
+        &__ssl {
+            span {
+                margin-left: 7px;
+                margin-top: 4px;
+            }
+        }
+
+        &__paymethods, &__ssl {
+            margin-top: 5px;
+        }
+    }
 }
