--- a/src/frontend/app/Views/blocks/header/css/header.scss
+++ b/src/frontend/app/Views/blocks/header/css/header.scss
@@ -1,1 +1,163 @@
 $img_this: '/static/img/blocks/header/';
+
+.header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 22px 0;
+    z-index: 10;
+
+    &._fixed {
+        position: fixed;
+        border-bottom: 1px solid #E5EAF0;
+        background: #fff;
+
+        .header__nav {
+            li {
+                a {
+                    position: relative;
+                    color: #0F1629;
+                    display: flex;
+                    justify-content: center;
+
+                    &:before {
+                        content: '';
+                        background: #3167F2;
+                        width: 80%;
+                        min-width: 40px;
+                        height: 2px;
+                        position: absolute;
+                        bottom: -28px;
+                    }
+                }
+            }
+        }
+
+        .header__auth {
+            &-login {
+                color: #4D5FFF;
+            }
+
+            &-registration {
+                background: #4D5FFF;
+            }
+        }
+    }
+
+    &__button {
+        width: 36px;
+        height: 36px;
+        display: none;
+        background: #FFFFFF;
+        border: 1px solid #E0E7EF;
+        border-radius: 7px;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+
+        &-wrapper {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &-content {
+            position: relative;
+            transform: rotate(0deg);
+            width: 22px;
+            height: 14px;
+        }
+
+        span {
+            display: block;
+            position: absolute;
+            height: 2px;
+            width: 100%;
+            border-radius: 3px;
+            background: #94A3B8;
+            opacity: 1;
+            left: 0;
+            transform: rotate(0deg);
+            transition: .25s ease-in-out;
+
+            &:nth-child(1) {
+                top: 0;
+            }
+
+            &:nth-child(2) {
+                top: 6px;
+            }
+
+            &:nth-child(3) {
+                top: 12px;
+                width: 60%;
+            }
+        }
+
+        &._open {
+
+            &._burger {
+                span:nth-child(1) {
+                    top: 10px;
+                    transform: rotate(135deg);
+                }
+
+                span:nth-child(2) {
+                    opacity: 0;
+                    left: -60px;
+                }
+
+                span:nth-child(3) {
+                    top: 10px;
+                    width: 100%;
+                    transform: rotate(-135deg);
+                }
+
+                .header__button-content {
+                    height: 22px;
+                }
+            }
+        }
+    }
+
+    &__logo {
+        width: 150px;
+        height: 35px;
+        background: #000;
+    }
+
+    &__nav {
+        li {
+            &:not(:last-child) {
+                margin-right: 42px;
+            }
+
+            a {
+                font-weight: 500;
+                line-height: 24px;
+                color: #fff;
+            }
+        }
+    }
+
+    &__auth {
+        &-login {
+            margin-right: 20px;
+            line-height: 20px;
+            color: #fff;
+        }
+
+        &-registration {
+            width: 156px;
+            height: 36px;
+            background: rgba(76, 66, 245, 0.4);
+
+            span {
+                color: #fff;
+                margin-left: 10px;
+            }
+        }
+    }
+}
