--- a/src/frontend/app/Views/modules/includeCss/includePages.scss
+++ b/src/frontend/app/Views/modules/includeCss/includePages.scss
@@ -49,3 +49,6 @@
 //start-block--downloadStories
 @import "../../pages/downloadStories/css/downloadStories_mobile";
 //stop-block--downloadStories
+//start-block--api
+@import "../../pages/api/css/api_mobile";
+//stop-block--api
