--- a/src/frontend/app/Views/blocks/header/css/header.scss
+++ b/src/frontend/app/Views/blocks/header/css/header.scss
@@ -5,7 +5,7 @@ $img_this: '/static/img/blocks/header/';
     left: 0;
     top: 0;
     width: 100%;
-    padding: 22px 0;
+    padding: 17px 0;
     z-index: 10;
 
     &._fixed {
@@ -21,14 +21,16 @@ $img_this: '/static/img/blocks/header/';
                     display: flex;
                     justify-content: center;
 
-                    &:before {
-                        content: '';
-                        background: #3167F2;
-                        width: 80%;
-                        min-width: 40px;
-                        height: 2px;
-                        position: absolute;
-                        bottom: -28px;
+                    &._active {
+                        &:before {
+                            content: '';
+                            background: #3167F2;
+                            width: 80%;
+                            min-width: 40px;
+                            height: 2px;
+                            position: absolute;
+                            bottom: -23px;
+                        }
                     }
                 }
             }
